gccida/g1/parse_number
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:984:21: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                    ^~~~~~~~~~~~
                    cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:984:42: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                                         ^~~~~~~~~~~~
                                         cpp_string
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:987:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // r12 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:988:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:991:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v9; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:993:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v11; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:1028:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*v12] & 0x204) == 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/cpplex.c:1036:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v4] & 0x204) == 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parse_number/src/obj/cpplex.o] Error 1
